force-app/main/default/objects/Apttus_Config2__DataEnrichmentRule__c/Apttus_Config2__DataEnrichmentRule__c.object-meta.xml
<CustomObject>
    <description>Represents a single data enrichment rule in a validation/enrichment ruleset</description>
    <label>Data Enrichment Rule</label>
    <nameField>
        <displayFormat>ER-{00000000}</displayFormat>
        <label>Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Enrichment Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>