force-app/main/default/objects/Apttus_Config2__DataEnrichmentRule__c/fields/Apttus_Config2__Message__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Message__c</fullName>
    <description>The help text message for the target object field</description>
    <inlineHelpText>The help text message for the target object field</inlineHelpText>
    <label>Message</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>