force-app/main/default/objects/Apttus_Config2__DataEnrichmentRule__c/fields/Apttus_Config2__Required__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate whether the value is required in the target object field</description>
    <inlineHelpText>Flag to indicate whether the value is required in the target object field</inlineHelpText>
    <label>Required ?</label>
    <type>Checkbox</type>
</CustomField>