force-app/main/default/objects/Apttus_Config2__DataEnrichmentRule__c/fields/Apttus_Config2__TargetObjectField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TargetObjectField__c</fullName>
    <description>API name of the target object field for which value needs to be set</description>
    <inlineHelpText>API name of the target object field for which value needs to be set</inlineHelpText>
    <label>Target Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>